Add explicit main file for react-native
Metro will compile all source files, so we should avoid using dist to support source maps in people's apps. This key provides an explicit reference for metro to follow for react native, while keeping the main entry point for potential web consumption.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.1",
   "description": "Stack navigator component for React Navigation",
   "main": "dist/index.js",
+  "react-native": "src/index.js",
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
