--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Stack navigator component for React Navigation",
   "main": "dist/index.js",
   "files": [
-    "dist",
-    "src",
+    "dist/",
+    "src/",
     "LICENSE.md",
     "README.md"
    ],
