--- a/example/package.json
+++ b/example/package.json
@@ -2,23 +2,28 @@
   "name": "stackexample",
   "version": "0.0.1",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.1",
     "@react-navigation/core": "3.4.2",
     "@react-navigation/native": "^3.4.1",
-    "expo": "^33.0.7",
+    "expo": "^34.0.0",
     "expo-asset": "^5.0.1",
     "expo-constants": "~5.0.1",
     "hoist-non-react-statics": "^3.3.0",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-dom": "^16.8.6",
+    "react-native": "0.60.3",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^2.15.2",
+    "react-native-reanimated": "~1.3.0-alpha",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-unimodules": "~0.5.2",
+    "react-native-web": "^0.11.4",
     "react-navigation-drawer": "^2.0.0",
     "react-navigation-tabs": "2.2.0"
   },
