--- a/example/package.json
+++ b/example/package.json
@@ -9,17 +9,18 @@
     "ios": "expo start --ios"
   },
   "dependencies": {
-    "@react-navigation/core": "3.4.1",
-    "@react-navigation/native": "^3.4.1",
-    "expo": "^33.0.0",
+    "@expo/vector-icons": "10.0.5",
+    "@react-navigation/core": "3.5.0-alpha.7",
+    "@react-navigation/native": "^3.6.0-alpha.5",
+    "expo": "^33.0.7",
     "expo-asset": "^5.0.1",
     "expo-constants": "~5.0.1",
     "hoist-non-react-statics": "^3.3.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-paper": "^2.15.2",
-    "react-navigation-drawer": "^1.2.1",
-    "react-navigation-tabs": "*"
+    "react-navigation-drawer": "^1.3.0-alpha.0",
+    "react-navigation-tabs": "1.2.0-alpha.0"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.2.0"
