--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-navigation-stack",
-  "version": "1.3.0",
+  "version": "1.5.0",
   "description": "Stack navigator component for React Navigation",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
@@ -44,10 +44,9 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@commitlint/config-conventional": "^7.5.0",
-    "@expo/vector-icons": "^10.0.1",
     "@react-native-community/bob": "^0.4.1",
-    "@react-navigation/core": "^3.4.1",
-    "@react-navigation/native": "^3.4.1",
+    "@react-navigation/core": "^3.5.0-alpha.7",
+    "@react-navigation/native": "^3.6.0-alpha.1",
     "@release-it/conventional-changelog": "^1.0.0",
     "@types/jest": "^24.0.12",
     "@types/react": "^16.8.14",
@@ -60,12 +59,12 @@
     "husky": "^2.2.0",
     "jest": "^24.7.1",
     "prettier": "^1.17.0",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
-    "react-native": "~0.57.7",
+    "react": "16.8.3",
+    "react-dom": "16.8.6",
+    "react-native": "~0.59.8",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-screens": "^1.0.0-alpha.22",
-    "react-test-renderer": "16.5.0",
+    "react-test-renderer": "~16.8.0",
     "release-it": "^11.0.0",
     "scheduler": "^0.14.0",
     "typescript": "^3.4.5"
@@ -117,5 +116,8 @@
       "module",
       "typescript"
     ]
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2"
   }
 }
