--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "@babel/core": "^7.4.4",
     "@commitlint/config-conventional": "^7.5.0",
     "@react-native-community/bob": "^0.4.1",
-    "@react-navigation/core": "^3.5.0",
-    "@react-navigation/native": "^3.6.2",
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/jest": "^24.0.12",
     "@types/react": "^16.8.14",
@@ -61,6 +59,7 @@
     "prettier": "^1.17.0",
     "react": "16.8.3",
     "react-dom": "16.8.6",
+    "react-navigation": "^4.0.1",
     "react-native": "~0.59.8",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-screens": "^1.0.0-alpha.22",
@@ -70,9 +69,8 @@
     "typescript": "^3.4.5"
   },
   "peerDependencies": {
-    "@react-navigation/core": "^3.5.0",
-    "@react-navigation/native": "^3.6.2",
     "react": "*",
+    "react-navigation": "^4.0.1",
     "react-native": "*",
     "react-native-gesture-handler": "^1.0.0",
     "react-native-screens": "^1.0.0 || ^1.0.0-alpha"
@@ -91,7 +89,7 @@
       "<rootDir>/lib/"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|react-navigation-deprecated-tab-navigator|@react-navigation/core|@react-navigation/native)"
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|react-navigation|@react-navigation/core|@react-navigation/native)"
     ],
     "testRegex": "/__tests__/.*\\.(test|spec)\\.(js|tsx?)$",
     "transform": {
