--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-navigation-stack",
-  "version": "1.5.4",
+  "version": "1.6.0-alpha.1",
   "description": "Stack navigator component for React Navigation",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
-  "react-native": "lib/module/index.js",
+  "react-native": "src/index",
   "types": "lib/typescript/index.d.ts",
   "sideEffects": false,
   "files": [
